--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div.o {
   border-radius: 50px;
   position: absolute;
   left: 150px; top: 50px;
-  background: white;
+  background: red;
   -webkit-transform-origin: 25px 100px;
 }
 div.b {
